[package]
name = "cpx-coords"
version = "0.1.0"
edition = "2024"
authors = ["En-Jui Chang"]
description = "To power the rust-quantum project, this library provides a robust `Cpx` type, specifically optimized for the intensive complex number multiplications required for quantum gate applications and tensor product operations. It supports various coordinate representations to maximize performance."
license = "MIT"
keywords = ['complex-number','coordinates']

[dependencies]
